# Personal-Stylist

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
data/: dvc.yaml
data/neo4j/: compatibility.csv  items.csv  style_rules.csv
docker/: Dockerfile.api  Dockerfile.celery  Dockerfile.neo4j  healthcheck.sh
results/: eval_results_IlyaGusev_saiga2_7b_lora_finetuned_20250507_081731.json.dvc  eval_results_IlyaGusev_saiga2_7b_lora_pretrained_20250505_205746.json.dvc  eval_results_IlyaGusev_saiga2_7b_lora_pretrained_20250506_192358.json.dvc  eval_results_IlyaGusev_saiga_llama3_8b_finetuned_20250504_204348.json.dvc  eval_results_IlyaGusev_saiga_llama3_8b_finetuned_20250505_001108.json.dvc  eval_results_IlyaGusev_saiga_llama3_8b_pretrained_20250504_190024.json.dvc  eval_results_IlyaGusev_saiga_llama3_8b_pretrained_20250504_212156.json.dvc  eval_results_IlyaGusev_saiga_mistral_7b_pretrained_20250505_203757.json.dvc  eval_results_IlyaGusev_saiga_mistral_7b_pretrained_20250506_213404.json.dvc  eval_results_microsoft_phi-2_finetuned_20250504_113407.json.dvc  eval_results_microsoft_phi-2_pretrained_20250504_092451.json.dvc  eval_results_microsoft_phi-2_pretrained_20250504_094226.json.dvc  eval_results_microsoft_phi-2_pretrained_20250504_104951.json.dvc  eval_results_mistralai_Mistral-7B-v0.1_pretrained_20250504_100958.json.dvc
src/: celery_app.py  run_pipeline.py
src/api/: main.py
src/api/db/: neo4j.py  (+1 more)
src/bot/: keyboards.py  main.py  states.py
src/data/: .gitignore  articles.jsonl  augmented_questions.json  config.dvc  data.dvc  elyts_articles_html.dvc  elyts_articles_log.json  elyts_articles_log.json.dvc  enrich_questions.py  generate_augmented_questions.py  generate_neo4j_relations.py  generate_synth_openai_batches.py  parse_html.py  playwright_scraper_all_pages.py
src/ml/: config.py  dataset.py  finetune.py  run.py  test.py
src/monitoring/: metrics.py
src/services/: model_service.py
(+288 files in other folders)
